# mcp-memory-server

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.bob/notes/: pending-notes.txt
container/: Containerfile
examples/: QUICKSTART_M1.md  claude_code_config.json  cursor_config.json
src/mcp_memory/: __init__.py  cli.py  embeddings.py  llm.py  memory.py  quantization.py  server.py  storage.py
tests/: __init__.py  test_llm.py  test_memory.py  test_quantization.py
