[project]
name = "mcp-memory-server"
version = "0.1.0"
description = "Local MCP server for persistent IDE assistant memory"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Tailor Made", email = "hello@tailormade.mx"}
]
keywords = ["mcp", "memory", "ide", "assistant", "local"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "sentence-transformers>=2.2.0",
    "sqlite-vss>=0.1.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
mcp-memory-server = "mcp_memory.cli:main"

[project.urls]
Homepage = "https://github.com/tailor-made/mcp-memory-server"
Documentation = "https://github.com/tailor-made/mcp-memory-server#readme"
Repository = "https://github.com/tailor-made/mcp-memory-server"
Issues = "https://github.com/tailor-made/mcp-memory-server/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_memory"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
