[tool.poetry]
name = "mcp-memory-server"
version = "0.2.0"
description = "Local MCP server for persistent IDE assistant memory with local LLM reasoning and TurboQuant compression"
authors = ["Alvaro Gonzalez <alvaroglezz@hotmail.com>"]
license = "FSL-1.1-ALv2"
readme = "README.md"
homepage = "https://github.com/imalvaroglez/mcp-memory-server"
repository = "https://github.com/imalvaroglez/mcp-memory-server"
keywords = ["mcp", "memory", "ide", "assistant", "local", "embeddings", "llm", "quantization", "turboquant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Free For Educational Use",
    "License :: Free For Home Use",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "mcp_memory", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
mcp = ">=1.0.0"
sentence-transformers = ">=2.2.0"
sqlite-vss = ">=0.1.0"
numpy = ">=1.24.0"
pydantic = ">=2.0.0"
llama-cpp-python = ">=0.3.0"
huggingface-hub = ">=0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.21.0"
black = ">=23.0.0"
ruff = ">=0.1.0"
mypy = ">=1.0.0"

[tool.poetry.scripts]
mcp-memory-server = "mcp_memory.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
